MDEV-24584 Selecting INT column with COLLATE utf8mb4_general_ci throws an error